--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "godotTools.editorPath.godot4": "c:\\Programming\\Godot_v4.4.1-stable_win64"
+    "godotTools.editorPath.godot4": "c:\\Programming\\Godot_v4.4.1-stable_win64",
+    "explorer.sortOrder": "type",
+    "files.exclude": {
+        "**/.git": true,
+        "**/*.tmp": true,
+        "**/*.tscn": true,
+        "**/*.uid": true,
+    }
 }
